export const testIDs = {
  mainScreen: 'mainScreen',
  addActivityTabBarButton: 'addActivityTabBarButton',
  addActivityScreen: 'addActivityScreen',
  activityNameInput: 'activityNameInput',
  addActivityScreenButton: 'addActivityScreenButton',
  activitiesList: 'activitiesList',
};
